@@ -64,15 +64,6 @@ importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,slot)
 importFrom(methods,slotNames)
-importFrom(osmar,as_sp)
-importFrom(osmar,corner_bbox)
-importFrom(osmar,find)
-importFrom(osmar,find_down)
-importFrom(osmar,get_osm)
-importFrom(osmar,node)
-importFrom(osmar,osmsource_api)
-importFrom(osmar,tags)
-importFrom(osmar,way)
 importFrom(raster,brick)
 importFrom(raster,colortable)
 importFrom(raster,couldBeLonLat)
@@ -106,7 +97,6 @@ importFrom(rgeos,gIntersection)
 importFrom(rgeos,gIsValid)
 importFrom(rgeos,gPointOnSurface)
 importFrom(rgeos,gUnaryUnion)
-importFrom(rmapshaper,ms_simplify)
 importFrom(stats,dnorm)
 importFrom(stats,fft)
 importFrom(stats,na.omit)
